crates/wac-parser/tests/parser/fail/expected-multiple.wac
package test:comp;

type x = 